fix: acertando o overflow

--- a/src/index.css
+++ b/src/index.css
@@ -55,9 +55,6 @@
   }
 }
 
-html{
-  overflow-x: hidden;
-}
 
 
 .roboto-thin {
